Anonymous | Login | 2019-02-16 18:59 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0029075 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2017-09-02 20:06 | 2018-06-29 21:19 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Linux | OS | Ubuntu 17.04 | OS Version | 64 bit | ||||
Product Version | [OCCT] 7.2.0 | ||||||||
Target Version | [OCCT] 7.3.0 | Fixed in Version | [OCCT] 7.3.0 | ||||||
Summary | 0029075: Configuration - fix TKService linkage errors due to usage of GLX functions while using EGL | ||||||||
Description | Xw_Window uses GLX functions to choose preferred X Visual while creating window. This leads to undefined symbols errors while building OCCT with HAVE_EGL/HAVE_GLES2 option. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0070153) git (administrator) 2017-09-02 20:09 |
Branch CR29075 has been created by kgv. SHA-1: 329e382fff46def3bf87f95819183ae7f5e05c3e Detailed log of new commits: Author: kgv Date: Sat Sep 2 20:08:42 2017 +0300 0029075: Configuration - fix TKService linkage errors due to usage of GLX functions while using EGL Xw_Window, fixed usage of GLX functions for choosing Visual when building with HAVE_EGL/HAVE_GLES2 options. |
(0070154) git (administrator) 2017-09-02 20:47 |
Branch CR29075 has been updated forcibly by kgv. SHA-1: 51c3bb0a1d41ff4e0f41a3ba3ae0a0a941c98893 |
(0070155) kgv (developer) 2017-09-02 20:47 |
Patch is ready for review. |
(0070331) san (developer) 2017-09-08 08:53 |
Branch CR29075 reviewed without remarks, ready for testing. |
(0070407) kgv (developer) 2017-09-10 15:25 |
http://jenkins-test-10.nnov.opencascade.com/view/CR29075-master-KGV [^] |
(0070436) bugmaster (administrator) 2017-09-11 14:35 |
Combination - OCCT branch : CR29075 SHA-1: 51c3bb0a1d41ff4e0f41a3ba3ae0a0a941c98893 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. Number of compiler warnings: No new warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Windows: OCCT Total CPU difference: 17330.010689098726 / 17295.75286949859 [+0.20%] Producst Total CPU difference: 7688.758886599963 / 7720.302288799964 [-0.41%] Linux: OCCT Total CPU difference: 19451.89000000023 / 19456.560000000376 [-0.02%] Products Total CPU difference: 7703.40000000009 / 7725.120000000072 [-0.28%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0071020) git (administrator) 2017-09-29 17:11 |
Branch CR29075 has been deleted by kgv. SHA-1: 51c3bb0a1d41ff4e0f41a3ba3ae0a0a941c98893 |
![]() |
|||
occt: master 5cd5c874
Timestamp: 2017-09-02 17:08:42 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0029075: Configuration - fix TKService linkage errors due to usage of GLX functions while using EGL Xw_Window, fixed usage of GLX functions for choosing Visual when building with HAVE_EGL/HAVE_GLES2 options. |
||
mod - samples/tcl/dimensions.tcl | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest_OpenGlCommands.cxx | [ Diff ] [ File ] | ||
mod - src/Xw/Xw_Window.cxx | [ Diff ] [ File ] | ||
occt: master 1136702b
Timestamp: 2017-09-02 17:08:42 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0029075: Configuration - fix TKService linkage errors due to usage of GLX functions while using EGL Xw_Window, fixed usage of GLX functions for choosing Visual when building with HAVE_EGL/HAVE_GLES2 options. |
||
mod - samples/tcl/dimensions.tcl | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest_OpenGlCommands.cxx | [ Diff ] [ File ] | ||
mod - src/Xw/Xw_Window.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2017-09-02 20:06 | kgv | New Issue | |
2017-09-02 20:06 | kgv | Assigned To | => kgv |
2017-09-02 20:09 | git | Note Added: 0070153 | |
2017-09-02 20:40 | kgv | Relationship added | child of 0026823 |
2017-09-02 20:47 | git | Note Added: 0070154 | |
2017-09-02 20:47 | kgv | Note Added: 0070155 | |
2017-09-02 20:47 | kgv | Assigned To | kgv => san |
2017-09-02 20:47 | kgv | Status | new => resolved |
2017-09-08 08:53 | san | Note Added: 0070331 | |
2017-09-08 08:53 | san | Assigned To | san => bugmaster |
2017-09-08 08:53 | san | Status | resolved => reviewed |
2017-09-10 15:25 | kgv | Note Added: 0070407 | |
2017-09-11 14:35 | bugmaster | Note Added: 0070436 | |
2017-09-11 14:35 | bugmaster | Status | reviewed => tested |
2017-09-11 15:15 | bugmaster | Test case number | => Not required |
2017-09-21 19:33 | bugmaster | Changeset attached | => occt master 5cd5c874 |
2017-09-21 19:33 | bugmaster | Status | tested => verified |
2017-09-21 19:33 | bugmaster | Resolution | open => fixed |
2017-09-21 19:48 | apn | Target Version | 7.3.0 => 7.2.0 |
2017-09-22 12:03 | bugmaster | Target Version | 7.2.0 => 7.3.0 |
2017-09-29 13:26 | bugmaster | Changeset attached | => occt master 1136702b |
2017-09-29 17:11 | git | Note Added: 0071020 | |
2018-06-29 21:15 | aiv | Fixed in Version | => 7.3.0 |
2018-06-29 21:19 | aiv | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |