0029075: Configuration - fix TKService linkage errors due to usage of GLX functions while using EGL

Xw_Window, fixed usage of GLX functions for choosing Visual
when building with HAVE_EGL/HAVE_GLES2 options.